--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ function markerGet() {
 
     layerMarkers.markers.forEach((value)=>{
         value.events.register('mouseover', value, function(evt) {
-            if(document.getElementById('popup')) {
-                document.getElementById('popup').remove();
+            if(typeof(popup) != "undefined" && popup !== null) {
+                popup.destroy();
             }
             popup = new OpenLayers.Popup("popup",
             evt.object.lonlat,
